--- a/prep-javascript-arrays/index.html
+++ b/prep-javascript-arrays/index.html
@@ -4,12 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>JavaScript Objects</title>
+  <title>JavaScript Arrays</title>
+  <script src="main.js"></script>
 </head>
 
 <body>
-  <h1>JavaScript Objects</h1>
-  <script src="main.js"></script>
+  <h1>JavaScript Arrays</h1>
+
 </body>
 
 </html>
