--- a/prep-javascript-conditionals/index.html
+++ b/prep-javascript-conditionals/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <script>
-    // Your code here
+    // Your code here.
     var age = 22;
     if(age  < 18){
       console.log('A child');
