--- a/prep-javascript-dom-events/index.html
+++ b/prep-javascript-dom-events/index.html
@@ -11,6 +11,12 @@
   <button class="hello-world-btn">Hello World!</button>
   <script>
     // Your code here
+    document.addEventListener('DOMContentLoaded', function () {
+      console.log('content loaded!');
+    })
+    window.addEventListener('mousemove', function () {
+      console.log('mouse is moving!');
+    })
     $helloWorld = document.querySelector(".hello-world-btn");
     $helloWorld.addEventListener('click',handleClick);
     function handleClick(){
